# server-pool

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rule.md  tree.md
agent/: config.py  main.py  overrides.py  sim.py
agent/collectors/: __init__.py  cpu.py  gpu.py  memory.py  net.py
docs/superpowers/plans/: 2026-06-13-server-pool-dual-mode.md  2026-06-13-testtool-pyqt.md
docs/superpowers/specs/: 2026-06-13-server-pool-dual-mode-design.md  2026-06-13-testtool-pyqt-design.md
scripts/: crash.sh  ctl.py  inject_load.sh  reset_load.sh  status.sh
tests/: test_collectors.py  test_endpoints.py  test_sim.py
testtool/: README.md  pyproject.toml
testtool/app/: agent_client.py  config.py  docker_control.py  load_injector.py  main.py  poller.py  scenarios.py  sim_control.py
testtool/app/ui/: log_panel.py  main_window.py  scenario_panel.py  server_panel.py  server_table.py  sim_panel.py  theme.py
testtool/tests/: test_agent_client.py  test_config.py  test_docker_control.py  test_load_injector.py  test_scenarios.py  test_sim_control.py
