[project]
name = "server-pool-testtool"
version = "0.1.0"
description = "서버 풀 GUI 테스트 콘솔 (부하/장애/카오스 주입)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyQt6>=6.7",
    "docker>=7",
    "httpx>=0.27",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8", "pytest-qt>=4"]

[tool.pytest.ini_options]
pythonpath = ["."]
